<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_form" >

    <TextView
        android:id="@+id/tv_download_options_wifi_bandwidth"
        style="@style/TextAppearance.Sherlock.Widget.ActionBar.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_options_wifi_bandwidth" />

    <Spinner
        android:id="@+id/s_download_options_wifi"
        style="@style/Widget.Sherlock.Light.Spinner.DropDown.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_download_options_wifi_bandwidth" />

    <TextView
        android:id="@+id/tv_download_options_mobile_bandwidth"
        style="@style/TextAppearance.Sherlock.Widget.ActionBar.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_download_options_wifi"
        android:text="@string/dialog_options_mobile_bandwidth" />

    <Spinner
        android:id="@+id/s_download_options_mobile"
        style="@style/Widget.Sherlock.Light.Spinner.DropDown.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_download_options_mobile_bandwidth" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_download_options_mobile"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/b_download_options_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/b_download_options_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_ok" />
    </LinearLayout>

</RelativeLayout>